button disabled only when problem is unsolved now!  But 2 other bugs -> overlapping check and x, and clicked move immediately disappearing after first attempt at puzzle

--- a/frontend/src/components/styles/GliftPublicPuzzle.css
+++ b/frontend/src/components/styles/GliftPublicPuzzle.css
@@ -3,3 +3,11 @@
   height: 600px;
   margin: 0 auto;
 }
+
+#gliftContainer-internal-wrapper {
+  background-color: lightgrey;
+}
+
+.glift-comment-box {
+  background-color: aliceblue !important;
+}
